Fix gird spacing

--- a/client/sass/molecule/swatch.scss
+++ b/client/sass/molecule/swatch.scss
@@ -111,7 +111,7 @@
         padding: rem(10) rem(20);
     }
 
-    &-title, {
+    &-title {
         padding: rem(20);
     }
 
